kubernetes/test/test-api-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-flask-deployment
  labels:
    app: test-flask-api
    env: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-flask-api
  template:
    metadata:
      labels:
        app: test-flask-api
        env: test
    spec:
      containers:
        - name: test-flask-api
          imagePullPolicy: Always
          image: kelach/test_atx_incidents:1.0
          env:
            - name: REDIS_HOSTNAME
              value: $(TEST_REDIS_SERVICE_SERVICE_HOST)
          command: ['python3', , '-u', 'src/atx_traffic.py']
          ports:
            - name: http
              containerPort: 5000
