kubernetes/test/test-api-nodeport-service.yml
---
kind: Service
apiVersion: v1
metadata:
    name: test-api-service-nodeport
spec:
    type: NodePort
    selector:
        app: test-flask-api
    ports:
        - port: 5000
          targetPort: 5000
