kubernetes/test/test-api-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: ClusterIP
  selector:
    app: test-flask-api
  ports:
  - name: test-flask-api
    port: 5000
    targetPort: 5000
