kubernetes/test/test-wrk-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-worker-deployment
  labels:
    app: test-worker-api
    env: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-worker-api
  template:
    metadata:
      labels:
        app: test-worker-api
        env: test
    spec:
      containers:
        - name: test-worker-api
          imagePullPolicy: Always
          image: test_atx_incidents_api:1.0
          command: ['python3', 'src/worker.py']
          env:
            - name: REDIS_HOSTNAME
              value: $(REDIS_SERVICE_HOST)
            - name: IMAGUR_ACCESS_TOKEN
              value: 967ffa0d6f32d43b44578bac270e080f506ae998
